fix: picker closing the mask flicker (#1263)
* fix: picker closing the mask flicker

* fix: picker closing the mask flicker

* chore: 本地文档站点研发

* feat: 实验性组件深色模式适配

--- a/compiled/alipay/src/Typography/index.less
+++ b/compiled/alipay/src/Typography/index.less
@@ -8,6 +8,7 @@
     display: flex;
     align-items: center;
     width: fit-content;
+    color: @COLOR_TEXT_PRIMARY;
     .@{tabsPrefix} {
       &-text {
         line-height: @default-line-height;
